plang/testing/logs/false-incorrect/125/program125.p.p
b (z4W) (TBV69).


bf :- jBH QYjE sCLCo (lGL (Fm8iz) vyS (i (F) (S) (GG) (QF)) (a0CrG)) eQ.

wqK im.


jEIPC vD6YH (HOi) e :- (dWQN ji2 zeqQ).


pcu4 GzBO L.


dCgV G :- (((aRfRK N6Sp (wyzU (jU (pf ZtbM XgFDL) (UlUeh) cQZ (PL)) jECz (eZuOr (tq) P (Fz) k52l)) RmX8k (gUIh (xFqC QBFUj gcq6A) (I0) yd W); dVvR4 (hCUV (gA OpoE bU n2Qfh) (c49ja a76n (I) (Yp) Tv) D1r) (CY) (rq6P (g HH)))), (r5kF bmA); o zXG (g)).

bRXSA :- eOtj.

vf0 (UwM2x) (W) (G) (Q).

qs9br t77hJ azRR MTbC Hk1kg.

h.


rI Ym (FG7fP) vT :- (xxM).


go6 :- ((fsr mk8Of (UFy6) RN7WL (jqPb8 Lot)); (tm), ((kv))), ((x), m hXZL, x (Z7J)), ((tDEek, gRh5f)).
? y Qu.



